correcting @media rules to avoid top bar not showing up on width 767 due to conflicting rules of min and max width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -669,7 +669,7 @@ footer {
 }
 
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
     .header_small_devices {
         display: none;
     }
